# NotebookLm-Learnlab

./: .clinerules  .cursorrules  .env.example  .gitignore  .windsurfrules  CLAUDE.md  README.md  REPORT_structure.md  ai-guidelines.md  docker-compose.yml  generate-app.sh  init-project.py  init-project.sh  report_2nd.md  system.config.json  verify-project.sh
.claude/plans/: company-epm-separation.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  api.py  deps.py
backend/app/auth/: jwt.py  passwords.py
backend/app/core/: __init__.py  config.py  database.py  error_codes.py  exceptions.py
backend/app/db/: __init__.py  seeder.py
backend/app/modules/: __init__.py
backend/app/modules/account/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/admin/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/auth/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/domains/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/health/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/notebook/: __init__.py  router.py  schemas.py  service.py
backend/app/odm/: __init__.py  base.py  document.py  domain.py  notebook.py  user.py
backend/app/services/: email.py  rbac.py
backend/app/utils/: __init__.py  blocked_domains.py  email_validation.py  rate_limit.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: system.config.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DocumentTitle.tsx  ErrorBoundary.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/core/: index.ts
frontend/src/design-system/: design-system.md  (+1 more)
templates/: registry.json
(+100 files in other folders)
